--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: white;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +11,161 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+ul {
+  background-color: black;
+  padding: 20px;
+  list-style: none;
+  text-align: center;
+}
+
+li {
+  display: inline-block;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid white;
+  color: white;
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+  text-transform: uppercase;
+  transition: all 0.2s ease-in-out;
+}
+
+li:hover {
+  background-color: white;
+  color: black;
+  cursor: pointer;
+}
+
+
+
+h2 {
+  color: cornflowerblue;
+}
+
+nav {
+  height: 70px;
+  display: flex;
+  align-items: center;
+  padding: 20px 36px;
+  box-shadow: 0px 2.9px 7.45px rgba(0, 0, 0, 0.1);
+}
+
+.Navigation-logo {
+  max-width: 100px;
+  margin-right: 10px;
+}
+
+.Navigation-header {
+  font-size: 50px; /* adjust the font size to your liking */
+  font-weight: bold; /* make the text bold */
+  color: #333; /* set the text color */
+}
+
+.hero-image {
+  width: 1450px;
+  align-self: center;
+}
+
+section{
+  padding: 20px;
+}
+
+.Cards-Section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  border-radius: 8px;
+  overflow: hidden;
+  margin-bottom: 30px;
+  background-color: #fff;
+  transition: all 0.2s ease-in-out;
+  width: calc(33.33% - 20px);
+  min-width: 250px;
+  max-width: 350px;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.5);
+}
+
+.card img {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
+}
+
+.card-details {
+  padding: 20px;
+}
+
+.card-title {
+  margin: 0;
+  font-size: 20px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.7);
+  transition: all 0.2s ease-in-out;
+  z-index: 2;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.card:hover .card-title {
+  transform: translateY(-50%);
+}
+
+.card-rating {
+  margin: 10px 0;
+  font-size: 16px;
+  font-weight: bold;
+  color: #f39c12;
+}
+
+.card-description {
+  margin: 10px 0;
+  font-size: 16px;
+  color: #555;
+  height: 90px;
+  overflow: hidden;
+}
+
+.card-author {
+  margin: 10px 0;
+  font-size: 14px;
+  color: #999;
+}
+
+.card-badge {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 120px;
+  height: 30px;
+  background-color:green; /* Replace with the color you want */
+  color: #ffffff; /* Replace with the text color you want */
+  text-align: center;
+  line-height: 30px;
+  font-size: 15px;
+  font-weight: bold;
+  border-radius: 30px;
 }
